Add 'songs/text get' with pagination
