# internal/http-server/handlers/info/get/songinfo.go
@@ -1,11 +1,13 @@
 package songinfo
 
 import (
+	"encoding/json"
 	"errors"
 	"github.com/go-chi/chi/v5/middleware"
 	"github.com/go-chi/render"
 	"log/slog"
 	"net/http"
+	"net/url"
 	"song-library/internal/models"
 	"song-library/internal/storage"
 )
@@ -27,6 +29,10 @@ func New(log *slog.Logger, songInformer SongInformer) http.HandlerFunc {
 		songName := r.URL.Query().Get("song")
 
 		if groupName == "" || songName == "" {
+			log.Info("Bad request: get parameter 'group' or 'song' is missing",
+				slog.String("group", groupName),
+				slog.String("song", songName))
+
 			w.WriteHeader(http.StatusBadRequest)
 			return
 		}
@@ -38,12 +44,11 @@ func New(log *slog.Logger, songInformer SongInformer) http.HandlerFunc {
 		songDetail, err := songInformer.SongInfo(groupName, songName)
 		if err != nil {
 			if errors.Is(err, storage.ErrSongNotFound) {
-				log.Info("SongName not found",
+				log.Info("Song not found",
 					slog.String("group", groupName),
 					slog.String("song", songName))
 
 				w.WriteHeader(http.StatusNoContent)
-
 				return
 			}
 
@@ -55,5 +60,47 @@ func New(log *slog.Logger, songInformer SongInformer) http.HandlerFunc {
 		}
 
 		render.JSON(w, r, songDetail)
+	}
+}
+
+var ErrSongNotFound = errors.New("song not found")
+
+func GetInfoSongDetail(cfgHost string, groupName string, songName string) (songDetail models.SongDetail, err error) {
+	queryParameters := url.Values{}
+	queryParameters.Add("group", groupName)
+	queryParameters.Add("song", songName)
+
+	getURL := url.URL{
+		Scheme:   "http",
+		Host:     cfgHost,
+		Path:     "info",
+		RawQuery: queryParameters.Encode(),
+	}
+
+	resp, err := http.Get(getURL.String())
+	if err != nil {
+		return songDetail, err
+	}
+
+	defer func() {
+		_ = resp.Body.Close()
+	}()
+
+	if resp.StatusCode == http.StatusOK {
+
+		err := json.NewDecoder(resp.Body).Decode(&songDetail)
+		if err != nil {
+			return songDetail, err
+		}
+
+		return songDetail, nil
+
+	} else if resp.StatusCode == http.StatusNoContent {
+
+		return songDetail, ErrSongNotFound
+
+	} else {
+
+		return songDetail, errors.New("undefined return code from GET /info")
 	}
 }
